--- a/ramdisk/init.huawei.rc
+++ b/ramdisk/init.huawei.rc
@@ -7,17 +7,17 @@ on early-boot
 on init
     mkdir /cust
     mkdir /storage 0050 system sdcard_r
+	mkdir /storage/sdcard1 0000 system system
     mkdir /storage/sdcard0 0000 system system
-    mkdir /storage/sdcard1 0000 system system
 
     # for backwards compatibility
-    symlink /storage/sdcard0 /mnt/sdcard
-    symlink /storage/sdcard0 /sdcard
-    symlink /storage/sdcard1 /external_sd
-    symlink /storage/sdcard1 /mnt/external_sd
+	 symlink /storage/sdcard1 /mnt/sdcard
+    symlink /storage/sdcard1 /sdcard
+    symlink /storage/sdcard0 /mnt/internal_sd
+    symlink /storage/sdcard0 /internal_sd
 
-    export EXTERNAL_STORAGE /storage/sdcard0
-    export SECONDARY_STORAGE /storage/sdcard1
+    export EXTERNAL_STORAGE /storage/sdcard1
+    export SECONDARY_STORAGE /storage/sdcard0
 	
     # can start monitoring.
     mkdir /dev/bus 0755 root root
