Fix random reboots & Crash Browser

--- a/ramdisk/init.huawei.rc
+++ b/ramdisk/init.huawei.rc
@@ -314,9 +314,7 @@ on property:bluetooth.isEnabled=false
     stop abtfilt
 	
 service rmt_storage /system/bin/rmt_storage /dev/block/mmcblk0p9 /dev/block/mmcblk0p10 /dev/block/mmcblk0p14
-    class main
-	user root
-	disabled
+    class core
 
 service qmuxd /system/bin/qmuxd
     class main
@@ -378,9 +376,7 @@ service akm8975 /system/bin/akmd8975
     oneshot
 
 service rmt_oeminfo /system/bin/rmt_oeminfo
-    class main
-    user root
-    oneshot
+    class core
 
 on property:ro.boot.emmc=true
     start rmt_oeminfo
