--- a/ramdisk/init.huawei.rc
+++ b/ramdisk/init.huawei.rc
@@ -443,7 +443,7 @@ service pppd-gprs /system/bin/pppd call gprs
 # Start camera server as daemon
 service qcamerasvr /system/bin/mm-qcamera-daemon
    class late_start
-   user camera
+   user media
    group system camera inet audio
 
 service mpdecision /system/bin/mpdecision --no_sleep --avg_comp
