--- a/ramdisk/init.huawei.rc
+++ b/ramdisk/init.huawei.rc
@@ -232,8 +232,8 @@ on post-fs-data
     mkdir /data/misc/dhcp 0770 dhcp dhcp
     chown dhcp dhcp /data/misc/dhcp
     chmod 0660 /data/misc/wifi/wpa_supplicant.conf
-    mkdir /data/misc/wifi/hostapd 0770 wifi wifi
     chmod 0660 /data/misc/wifi/hostapd.conf
+    chmod 0660 /data/hostapd/hostapd.conf
 
     chmod 0660 /dev/assd
     chown smartcard smartcard /dev/assd
@@ -308,6 +308,48 @@ on post-fs-data
 on property:init.svc.wpa_supplicant=stopped
     stop dhcpcd
 
+service wlan_detect /system/bin/wlan_detect
+    class main
+    user root
+    group root
+    oneshot
+
+service p2p_supplicant /system/bin/wpa_supplicant -Dnl80211 -ieth0 -e/data/misc/wifi/entropy.bin -puse_p2p_group_interface=1 -W -c/data/misc/wifi/wpa_supplicant.conf
+    class main
+    group wifi inet
+    socket wpa_eth0 dgram 660 wifi wifi
+    disabled
+    oneshot
+
+service wpa_supplicant /system/bin/wpa_supplicant -Dnl80211 -ieth0 -e/data/misc/wifi/entropy.bin -puse_p2p_group_interface=1 -W -c/data/misc/wifi/wpa_supplicant.conf
+    class main
+    group wifi inet
+    socket wpa_eth0 dgram 660 wifi wifi
+    disabled
+    oneshot
+
+service dhcpcd_eth0 /system/bin/dhcpcd -ABKL
+     class main
+     disabled
+     oneshot
+
+service iprenew_eth0 /system/bin/dhcpcd -n
+    class main        
+    disabled        
+    oneshot	
+
+service iprenew_p2p /system/bin/dhcpcd -n p2p
+    class main
+    disabled
+    oneshot
+
+service hostapd /system/bin/hostapd -dddd /data/misc/wifi/hostapd.conf
+    class late_start
+    user root
+    group root
+    oneshot
+    disabled
+
 on property:bluetooth.isEnabled=true
     start abtfilt
     write /sys/class/bluetooth/hci0/idle_timeout 7000
@@ -336,42 +378,13 @@ service netmgrd /system/bin/netmgrd
 on property:sys.radio.shutdown=true
    exec /system/bin/sh /system/etc/init.qcom.efs.sync.sh
 
-service wpa_supplicant /system/bin/wpa_supplicant -Dnl80211 -ieth0 -puse_p2p_group_interface=1 -W -c/data/misc/wifi/wpa_supplicant.conf
-    class main
-    group wifi inet
-    socket wpa_eth0 dgram 660 wifi wifi
-    disabled
-    oneshot
-	
-service dhcpcd_eth0 /system/bin/dhcpcd -BKLG
-    class main
-    disabled
-    oneshot
-
-service iprenew_eth0 /system/bin/dhcpcd -n
-    class main
-    disabled
-    oneshot
-	
-service p2p_supplicant /system/bin/wpa_supplicant -Dnl80211 -ieth0 -puse_p2p_group_interface=1 -W -c/data/misc/wifi/wpa_supplicant.conf
-    class main
-    group wifi inet
-    socket wpa_eth0 dgram 660 wifi wifi
-    disabled
-    oneshot
-
-service iprenew_p2p /system/bin/dhcpcd -n p2p
-    class main
-    disabled
-    oneshot
-
 service dhcpcd_bnep0 /system/bin/dhcpcd -BKLG
     disabled
     oneshot
 	 
 service oem_rpc_svc /system/bin/oem_rpc_svc
     class main
-	oneshot
+    oneshot
 
 service gps_nmea /system/bin/port-bridge /dev/nmea /dev/ttyGS1
     disabled
@@ -399,13 +412,6 @@ on property:ro.boot.emmc=true
     start rmt_oeminfo
     start rmt_storage
 
-service hostapd /system/bin/hostapd -dddd /data/misc/wifi/hostapd.conf
-    class late_start
-    socket hostapd_eth0 dgram 660 root wifi
-    user root
-    group wifi
-    oneshot
-    disabled
 
 service abtfilt /system/bin/abtfilt -a -d -z -n -q -v -s -w eth0
     class late_start
@@ -446,7 +452,7 @@ service qcamerasvr /system/bin/mm-qcamera-daemon
    user media
    group system camera inet audio
 
-service mpdecision /system/bin/mpdecision --no_sleep --avg_comp
+service mpdecision /system/bin/mpdecision --Nw 5.4 --Ts 350 --no_sleep --avg_comp --single_core_while_panel_off
     class late_start 
     user root
     disabled
