--- a/ramdisk/init.huawei.rc
+++ b/ramdisk/init.huawei.rc
@@ -40,6 +40,7 @@ on post-fs
     chmod 0660 /sys/module/bluetooth_power/parameters/power
     chmod 0660 /sys/module/hci_smd/parameters/hcismd_set
     chmod 0660 /sys/class/rfkill/rfkill0/state
+    chmod 0660 /sys/class/rfkill/rfkill0/type
     chmod 0660 /proc/bluetooth/sleep/proto
     chmod 0660 /proc/bluetooth/clock/proto
     chown bluetooth bluetooth /dev/ttyHS0
@@ -196,18 +197,6 @@ service ril-qmi /system/bin/sh /init.qcom.ril.path.sh
 on post-fs-data
     mkdir /data/misc/bluetooth 0770 bluetooth bluetooth
 
-    chmod 0666 /sys/class/rfkill/rfkill0/state
-    mkdir /data/misc/bluetoothd/bluedroid 0776 bluetooth system 
-
-    rm /data/misc/bluetoothd/bluedroid/bluedroid_ref 
-    write /data/misc/bluetoothd/bluedroid/bluedroid_ref  0
-    chown bluetooth system /data/misc/bluetoothd/bluedroid/bluedroid_ref
-    chmod 0776 /data/misc/bluetoothd/bluedroid/bluedroid_ref
-
-    write /data/btaddr 0
-    chown bluetooth system /data/btaddr
-    chmod 0660 /data/btaddr
-
 # Create  WIFI filesystem structure
     mkdir /data/misc
     chmod 01771 /data/misc/
@@ -230,6 +219,9 @@ on post-fs-data
     mkdir /data/misc/wifi/wpa_supplicant 0770 wifi wifi
     mkdir /data/misc/dhcp 0770 dhcp dhcp
     chown dhcp dhcp /data/misc/dhcp
+    chmod 0660 /data/misc/wifi/wpa_supplicant.conf
+    chmod 0660 /data/misc/wifi/hostapd.conf
+    chmod 0660 /data/hostapd/hostapd.conf
 
     chmod 0660 /dev/assd
     chown smartcard smartcard /dev/assd
@@ -294,9 +286,7 @@ on post-fs-data
     # Create directory for FOTA
     mkdir /data/fota 0771
     chown system system /data/fota
-
-    # Provide the access to hostapd.conf only to root and group
-    chmod 0660 /data/hostapd/hostapd.conf
+  
 
     # Create /data/time folder for time-services
     mkdir /data/time/ 0700 system system
@@ -306,13 +296,48 @@ on post-fs-data
 on property:init.svc.wpa_supplicant=stopped
     stop dhcpcd
 
-on property:bluetooth.isEnabled=true
-    start abtfilt
-    write /sys/class/bluetooth/hci0/idle_timeout 7000
+service wlan_detect /system/bin/wlan_detect
+    class main
+    user root
+    group root
+    oneshot
 
-on property:bluetooth.isEnabled=false
-    stop abtfilt
-	
+service p2p_supplicant /system/bin/wpa_supplicant -Dnl80211 -ieth0 -e/data/misc/wifi/entropy.bin -puse_p2p_group_interface=1 -W -c/data/misc/wifi/wpa_supplicant.conf
+    class main
+    group wifi inet
+    socket wpa_eth0 dgram 660 wifi wifi
+    disabled
+    oneshot
+
+service wpa_supplicant /system/bin/wpa_supplicant -Dnl80211 -ieth0 -e/data/misc/wifi/entropy.bin -puse_p2p_group_interface=1 -W -c/data/misc/wifi/wpa_supplicant.conf
+    class main
+    group wifi inet
+    socket wpa_eth0 dgram 660 wifi wifi
+    disabled
+    oneshot
+
+service dhcpcd_eth0 /system/bin/dhcpcd -ABKL
+     class main
+     disabled
+     oneshot
+
+service iprenew_eth0 /system/bin/dhcpcd -n
+    class main        
+    disabled        
+    oneshot	
+
+service iprenew_p2p /system/bin/dhcpcd -n p2p
+    class main
+    disabled
+    oneshot
+
+service hostapd /system/bin/hostapd -dddd /data/misc/wifi/hostapd.conf
+    class late_start
+    user root
+    group root
+    oneshot
+    disabled
+
 service rmt_storage /system/bin/rmt_storage /dev/block/mmcblk0p9 /dev/block/mmcblk0p10 /dev/block/mmcblk0p14
     class core
 
@@ -327,38 +352,23 @@ service netmgrd /system/bin/netmgrd
 on property:sys.radio.shutdown=true
    exec /system/bin/sh /system/etc/init.qcom.efs.sync.sh
 
-service wpa_supplicant /system/bin/wpa_supplicant -Dnl80211 -ieth0 -puse_p2p_group_interface=1 -W -c/data/misc/wifi/wpa_supplicant.conf
-    class main
-    group wifi inet
-    socket wpa_eth0 dgram 660 wifi wifi
+service dhcpcd_bt-pan /system/bin/dhcpcd -BKLG
+    class late_start 
     disabled
     oneshot
-
-service dhcpcd_eth0 /system/bin/dhcpcd -BKLG
-    class main
-    disabled
-    oneshot
-
-service iprenew_eth0 /system/bin/dhcpcd -n
-    class main
-    disabled
-    oneshot
-
-service iprenew_p2p /system/bin/dhcpcd -n p2p
-    class main
-    disabled
-    oneshot
-
-service dhcpcd_bnep0 /system/bin/dhcpcd -BKLG
+ 
+service iprenew_bt-pan /system/bin/dhcpcd -n
+    class late_start
     disabled
     oneshot
 	 
 service oem_rpc_svc /system/bin/oem_rpc_svc
     class main
-	oneshot
+    oneshot
 
 service gps_nmea /system/bin/port-bridge /dev/nmea /dev/ttyGS1
     disabled
+
 
 service compassd /system/bin/compassd
     class main
@@ -375,6 +385,15 @@ service akm8975 /system/bin/akmd8975
     disabled
     oneshot
 
+service qcom-post-boot /system/bin/sh /system/etc/init.qcom.post_boot.sh
+    class main
+    user root
+    disabled
+    oneshot
+    
+on property:sys.boot_completed=1
+    start qcom-post-boot
+
 service rmt_oeminfo /system/bin/rmt_oeminfo
     class core
 
@@ -382,18 +401,8 @@ on property:ro.boot.emmc=true
     start rmt_oeminfo
     start rmt_storage
 
-service hostapd /system/bin/hostapd -dddd /data/hostapd/hostapd.conf
+service btmac /system/bin/btmac
     class main
-    user root
-    group root
-    oneshot
-    disabled
-
-service abtfilt /system/bin/abtfilt -a -d -z -n -q -v -s -w eth0
-    class late_start
-    user root
-    group bluetooth net_bt_admin inet net_admin net_raw
-    disabled
     oneshot
 
 on property:net.service.pppd.enable=1
@@ -428,7 +437,7 @@ service qcamerasvr /system/bin/mm-qcamera-daemon
    user media
    group system camera inet audio
 
-service mpdecision /system/bin/mpdecision --no_sleep --avg_comp
+service mpdecision /system/bin/mpdecision --Nw 5.4 --Ts 350 --no_sleep --avg_comp --single_core_while_panel_off
     class late_start 
     user root
     disabled
