--- a/ramdisk/ueventd.huawei.rc
+++ b/ramdisk/ueventd.huawei.rc
@@ -7,28 +7,29 @@
 /dev/urandom              0666   root       root
 /dev/ashmem               0666   root       root
 /dev/binder               0666   root       root
-/dev/hw_led        	  0740   system     system
+/dev/hw_led        	      0740   system     system
 /dev/rtc0                 0600   system     system
 
 # Anyone can read the logs, but if they're not in the "logs"
 # group, then they'll only see log entries for their UID.
 /dev/log/*                0666   root       log
 
-# the msm hw3d client device node is world writable/readable.
+# The msm hw3d client device node is world writable/readable.
 /dev/msm_hw3dc            0666   root       root
 
-# the DIAG device node is not world writable/readable.
+# The DIAG device node is not world writable/readable.
 /dev/diag                 0660   system     radio
-# the genlock client device node is world writable/readable.
-/dev/genlock              0666   graphics      graphics
 
-# gpu driver for adreno200 is globally accessible
+# The genlock client device node is world writable/readable.
+/dev/genlock              0666   graphics   graphics
+
+# GPU driver for adreno200 is globally accessible
 /dev/kgsl                 0666   root       root
 /dev/kgsl-3d0             0666   root       root
 /dev/kgsl-2d0             0666   root       root
 /dev/kgsl-2d1             0666   root       root
 
-# these should not be world writable
+# These should not be world writable
 /dev/diag_arm9            0660   radio      radio
 /dev/android_adb          0660   adb        adb
 /dev/android_adb_enable   0660   adb        adb
@@ -38,7 +39,6 @@
 /dev/uinput               0660   system     bluetooth
 /dev/alarm                0664   system     radio
 /dev/tty0                 0660   root       system
-/dev/graphics/fb1         0660   system     graphics
 /dev/graphics/*           0660   system     graphics
 /dev/msm_hw3dm            0660   system     graphics
 /dev/input/*              0660   root       input
@@ -48,11 +48,8 @@
 /dev/pmem_audio           0660   system     audio
 /dev/pmem_adsp*           0660   system     audio
 /dev/pmem_camera*         0660   system     camera
-
-/dev/graphics/fb0         0660   system     graphics
-
+/dev/graphics/fb0         0666   system     graphics
 /dev/oncrpc/*             0666   root       system
-
 /dev/gss                  0660   gps        gps
 /dev/adsp/*               0660   system     audio
 /dev/snd/*                0660   system     audio
@@ -125,45 +122,47 @@
 /dev/ttyHSL1              0660   system     system
 /dev/tty_sdio_00          0660   system     system
 /dev/usb_accessory        0660   root       usb
-/dev/video*	          0660   system     camera
-/dev/media*	          0660   system     camera
+/dev/video*	              0660   system     camera
+/dev/media*	              0660   system     camera
 /dev/v4l-subdev*          0660   system     camera
 /dev/tun                  0660   system     vpn
-/dev/msm_qcelp_in         0660  system       audio
-/dev/msm_evrc_in          0660  system       audio
-/dev/msm_preproc_ctl      0660  system       audio
-#regular apps need to be able to open ion
-/dev/ion                  0664   system     system
-/dev/msm_qcelp            0660  system       audio
-/dev/msm_evrc             0660  system       audio
-/dev/msm_acdb             0660  system     audio
-/dev/msm_fm               0660  system       audio
-/dev/msm_ac3              0660  system       audio
-/dev/msm_cad              0660  system       audio
-/dev/msm_rtac             0660  system       audio
-/dev/oncrpc/300000ba:00010000  0660   system     drmrpc
+/dev/msm_qcelp_in         0660   system     audio
+/dev/msm_evrc_in          0660   system     audio
+/dev/msm_preproc_ctl      0660   system     audio
 
-/dev/accel        0664    system       system
-/dev/compass_aot        0664    system       system
-/dev/akm8975_dev        0664    system       system
-/dev/akm8963_dev        0664    system       system
-/dev/gyro        0664    system       system
-/dev/light              0664    system       system
-/dev/proximity          0664    system       system
+# Regular apps need to be able to open ion
+/dev/ion                  0664   system     system
+/dev/msm_qcelp            0660   system     audio
+/dev/msm_evrc             0660   system     audio
+/dev/msm_acdb             0660   system     audio
+/dev/msm_fm               0660   system     audio
+/dev/msm_ac3              0660   system     audio
+/dev/msm_cad              0660   system     audio
+/dev/msm_rtac             0660   system     audio
+/dev/oncrpc/300000ba:00010000  0660   system     drmrpc
+/dev/accel                0664    system       system
+/dev/compass_aot          0664    system       system
+/dev/akm8975_dev          0664    system       system
+/dev/akm8963_dev          0664    system       system
+/dev/gyro                 0664    system       system
+/dev/light                0664    system       system
+/dev/proximity            0664    system       system
 
 # CDMA radio interface MUX
 /dev/ts0710mux*           0640   radio      radio
 /dev/ppp                  0660   radio      vpn
 
-# sysfs properties
+# Sysfs properties
 /sys/devices/virtual/input/input*   enable      0660  root   input
 /sys/devices/virtual/input/input*   poll_delay  0660  root   input
-#permissions for video
+
+# Permissions for video
 /dev/msm_vidc_reg         0660  system       audio
 /dev/msm_vidc_dec         0660  system       audio
 /dev/msm_vidc_dec_sec     0660  system       audio
 /dev/msm_vidc_enc         0660  system       audio
-#permissions for audio
+
+# Permissions for audio
 /dev/msm_amrnb            0660  system       audio
 /dev/msm_amrwb            0660  system       audio
 /dev/msm_aac              0660  system       audio
@@ -176,28 +175,29 @@
 /dev/msm_amrnb_in         0640  system       audio
 /sys/devices/virtual/smdpkt/smdcntl*       open_timeout   0664 radio radio
 /dev/msm_dsps             0660  system       system
-/dev/tzcom                0660   system     drmrpc
-/dev/qce                  0660   system     drmrpc
-/dev/i2c-0                0664   root       system
-/dev/i2c-1                0664   root       system
-/dev/i2c-2                0664   root       system
-/dev/i2c-4                0664   root       system
-/dev/i2c-5                0664   media       media
-/dev/msm_rotator          0660   system     graphics
-/dev/msm_pcm_lp_dec       0660   system     audio
-/dev/smd4                 0660   system     system
-/dev/smd3                 0660   bluetooth      bluetooth
-/dev/smd2                 0660   bluetooth      bluetooth
-/dev/smd7                 0640   radio      radio
-/dev/rfcomm0              0660   bluetooth   bluetooth
-/dev/sdio_tty_ciq_00      0660   system     system
+/dev/tzcom                0660  system       drmrpc
+/dev/qce                  0660  system       drmrpc
+/dev/i2c-0                0664  root         system
+/dev/i2c-1                0664  root         system
+/dev/i2c-2                0664  root         system
+/dev/i2c-4                0664  root         system
+/dev/i2c-5                0664  media        media
+/dev/msm_rotator          0660  system       graphics
+/dev/msm_pcm_lp_dec       0660  system       audio
+/dev/smd4                 0660  system       system
+/dev/smd3                 0660  bluetooth    bluetooth
+/dev/smd2                 0660  bluetooth    bluetooth
+/dev/smd7                 0640  radio        radio
+/dev/rfcomm0              0660  bluetooth    bluetooth
+/dev/sdio_tty_ciq_00      0660  system       system
 /sys/devices/virtual/usb_composite/*   enable      0664  root   system
 /dev/block/mmcblk0p7      0660  system       system
 /dev/hw_extern_sdcard     0444  sdcard_rw    sdcard_rw
 /dev/smem_sleep_log       0664	system       system
-/dev/pn544                  0660   root   nfc
-/dev/key_test              0664   system   system
-/dev/hw_led            0740   system     system 
+/dev/pn544                0660  root         nfc
+/dev/key_test             0664  system       system
+/dev/hw_led               0740     system    system 
+
 # DVB devices
 /dev/dvb/adapter0/demux*  0444   media       media
 /dev/dvb/adapter0/dvr*    0664   media       media
