--- a/ramdisk/init.huawei.rc
+++ b/ramdisk/init.huawei.rc
@@ -1,5 +1,9 @@
 import init.huawei.usb.rc
 
+on init
+    # Set permissions for persist partition
+    mkdir /persist 0771 system system
+
 on early-init
     mount debugfs debugfs /sys/kernel/debug
 
@@ -47,19 +51,10 @@ on post-fs
     chmod 0660 /dev/ttyHS0
     chown bluetooth bluetooth /sys/devices/platform/msm_serial_hs.0/clock
     chmod 0660 /sys/devices/platform/msm_serial_hs.0/clock
-
+   
     chmod 0664 /dev/light
     chmod 0664 /dev/proximity
     chmod 0664 /dev/accel
-    chmod 0664 /dev/compass_aot
-    chmod 0664 /dev/akm8975_dev
-    chmod 0664 /dev/compass_dev
-    chmod 0664 /dev/gyro
-    chmod 0664 /dev/akm8963_dev
-    chown system system /sys/power/autosleep
-    chown radio system /sys/class/leds/ptt_led/brightness
-    chmod 0660 /dev/msm_cad
-    chmod 0755 /proc/cmdline
 
     # Create QMUX deamon socket area
     mkdir /dev/socket/qmux_radio 0770 radio radio
@@ -113,6 +108,7 @@ on post-fs
     chmod 0664 /sys/module/lowmemorykiller/parameters/adj
     chown root system /sys/module/lowmemorykiller/parameters/minfree
     chmod 0664 /sys/module/lowmemorykiller/parameters/minfree
+
     # To allow interfaces to get v6 address when tethering is enabled
     write /proc/sys/net/ipv6/conf/rmnet0/accept_ra 2
     write /proc/sys/net/ipv6/conf/rmnet1/accept_ra 2
@@ -130,7 +126,14 @@ on post-fs
     write /proc/sys/net/ipv6/conf/rmnet_sdio5/accept_ra 2
     write /proc/sys/net/ipv6/conf/rmnet_sdio6/accept_ra 2
     write /proc/sys/net/ipv6/conf/rmnet_sdio7/accept_ra 2
-    setrlimit 7 2048 2048
+
+    # To prevent out of order acknowledgements from making
+    # connection tracking to treat them as not belonging to
+    # the connection they belong to.
+    # Otherwise, a weird issue happens in which some long
+    # connections on high-throughput links get dropped when
+    # an ack packet comes out of order
+    write /proc/sys/net/netfilter/nf_conntrack_tcp_be_liberal 1
 
     chown system system /sys/kernel/logger/log_main/enable
     chown system system /sys/kernel/logger/log_events/enable
@@ -138,11 +141,6 @@ on post-fs
     chown system system /sys/kernel/logger/log_main/priority
     chown system system /sys/kernel/logger/log_events/priority
     chown system system /sys/kernel/logger/log_radio/priority
-
-    chown system system /sys/devices/platform/mmi_key_dev/keytest
-
-    chmod 664 /dev/input/event1
-    chmod 664 /dev/input/event2
 
     chown system system /sys/devices/platform/msm_hsusb/gadget/sdstatus
     chown system system /sys/devices/platform/msm_hsusb/gadget/switchusb
@@ -223,15 +221,6 @@ on post-fs-data
     chown system system /data/misc/wifi/load/
     mkdir /data/misc/wifi/bin 0775 system system
 
-    chmod 0660 /dev/assd
-    chown smartcard smartcard /dev/assd
-    
-    chmod 2770 /data/radio
-    
-    chown radio system /sys/class/leds/ptt_led/brightness
-    
-    insmod /system/lib/modules/pppoe.ko
-
     # Create directory used by audio subsystem
     mkdir /data/misc/audio 0770 audio audio
 
@@ -250,12 +239,9 @@ on post-fs-data
     chown system system /sys/devices/platform/msm_sdcc.3/polling
     chown system system /sys/devices/platform/msm_sdcc.4/polling
 
-    mkdir /data/system 0775 system system
     # Create directories for wiper services
     mkdir /data/wpstiles/ 0755 shell
     mkdir /data/wiper 0755 gps qcom_oncrpc
-
-    insmod /system/lib/modules/pppoe.ko
 
     chown system system /sys/class/android_usb/android0/f_mass_storage/lun/file
     chmod 0660 /sys/class/android_usb/android0/f_mass_storage/lun/file
@@ -267,29 +253,9 @@ on post-fs-data
     chmod 0660 /sys/power/touch_event
     chmod 0660 /sys/power/touch_event_timer
     chmod 2770 /data/radio
-    chown system system /sys/devices/platform/mmi_key_dev/keytest
 
     # Create directories for gpsone_daemon services
     mkdir /data/misc/gpsone_d 0770 system system
-
-    # Create directories for QuIPS
-    mkdir /data/misc/quipc 0770 gps system
-    # Create directories for Location services
-    mkdir /data/misc/location 0770 gps gps
-    mkdir /data/misc/location/mq 0770 gps gps
-    mkdir /data/misc/location/xtwifi 0770 gps gps
-
-    # Create directory from IMS services
-    mkdir /data/shared 0755
-    chown system system /data/shared
-
-    # Create directory for FOTA
-    mkdir /data/fota 0771
-    chown system system /data/fota
-  
-
-    # Create /data/time folder for time-services
-    mkdir /data/time/ 0700 system system
 
     setprop vold.post_fs_data_done 1
 
@@ -321,10 +287,15 @@ service wpa_supplicant /system/bin/wpa_supplicant -Dnl80211 -ieth0 -e/data/misc/
     disabled
     oneshot
 
-service dhcpcd_eth0 /system/bin/dhcpcd -ABKL
+service dhcpcd_eth0 /system/bin/dhcpcd -BKLG
      class main
      disabled
      oneshot
+
+service dhcpcd_eth0 /system/bin/dhcpcd -BKLG
+    class main
+    disabled
+    oneshot
 
 service iprenew_eth0 /system/bin/dhcpcd -n
     class main        
@@ -332,6 +303,11 @@ service iprenew_eth0 /system/bin/dhcpcd -n
     oneshot	
 
 service iprenew_p2p /system/bin/dhcpcd -n p2p
+    class main
+    disabled
+    oneshot
+
+service iprelease_eth0 /system/bin/dhcpcd -k
     class main
     disabled
     oneshot
