--- a/ramdisk/init.huawei.rc
+++ b/ramdisk/init.huawei.rc
@@ -1,9 +1,5 @@
 import init.huawei.usb.rc
 
-on init
-    # Set permissions for persist partition
-    mkdir /persist 0771 system system
-
 on early-init
     mount debugfs debugfs /sys/kernel/debug
 
@@ -145,6 +141,11 @@ on post-fs
     chown system system /sys/devices/platform/msm_hsusb/gadget/sdstatus
     chown system system /sys/devices/platform/msm_hsusb/gadget/switchusb
     chown system system /sys/devices/platform/msm_hsusb/gadget/fixusb
+	
+    chown system /sys/devices/platform/rs300000a7.65536/force_sync
+    chown system /sys/devices/platform/rs300000a7.65536/sync_sts
+    chown system /sys/devices/platform/rs300100a7.65536/force_sync
+    chown system /sys/devices/platform/rs300100a7.65536/sync_sts
 
     # Tweak background writeout
     write /proc/sys/vm/dirty_expire_centisecs 200
@@ -185,11 +186,14 @@ on post-fs
     chown system system /sys/devices/system/cpu/cpu0/cpufreq/scaling_max_freq
     chmod 0660 /sys/devices/system/cpu/cpu0/cpufreq/scaling_max_freq
     chown system system /sys/devices/system/cpu/cpu0/cpufreq/scaling_min_freq
-
-service ril-qmi /system/bin/sh /init.qcom.ril.path.sh
-    class main
-    user root
-    oneshot
+	
+    write /sys/module/pm2/modes/cpu0/standalone_power_collapse/idle_enabled 1
+    write /sys/module/pm2/modes/cpu1/standalone_power_collapse/idle_enabled 1
+    write /sys/module/pm2/modes/cpu0/standalone_power_collapse/suspend_enabled 1
+    write /sys/module/pm2/modes/cpu1/standalone_power_collapse/suspend_enabled 1
+    write /sys/module/pm2/modes/cpu0/power_collapse/suspend_enabled 1
+    write /sys/module/pm2/modes/cpu0/power_collapse/idle_enabled 1
+    write /sys/devices/system/cpu/cpufreq/ondemand/sampling_rate 25000
 
 # Msm specific files that need to be created on /data
 on post-fs-data
@@ -224,10 +228,6 @@ on post-fs-data
     # Create directory used by audio subsystem
     mkdir /data/misc/audio 0770 audio audio
 
-    # Mounting of persist is moved to 'on emmc-fs' and 'on fs' sections
-    # We chown/chmod /persist again so because mount is run as root + defaults
-    chown system system /persist
-    chmod 0771 /persist
     chmod 0664 /sys/devices/platform/msm_sdcc.1/polling
     chmod 0664 /sys/devices/platform/msm_sdcc.2/polling
     chmod 0664 /sys/devices/platform/msm_sdcc.3/polling
@@ -268,11 +268,6 @@ service wlan_detect /system/bin/wlan_detect
     group root
     oneshot
 
-service bridgemgrd /system/bin/bridgemgrd
-    class main
-    user radio
-    group radio
-
 service p2p_supplicant /system/bin/wpa_supplicant -Dnl80211 -ieth0 -e/data/misc/wifi/entropy.bin -puse_p2p_group_interface=1 -W -c/data/misc/wifi/wpa_supplicant.conf
     class main
     group wifi inet
@@ -292,7 +287,7 @@ service dhcpcd_eth0 /system/bin/dhcpcd -BKLG
      disabled
      oneshot
 
-service dhcpcd_eth0 /system/bin/dhcpcd -BKLG
+service dhcpcd_p2p /system/bin/dhcpcd -BKLG
     class main
     disabled
     oneshot
@@ -344,9 +339,6 @@ service qmuxd /system/bin/qmuxd
 service netmgrd /system/bin/netmgrd
     class main
 
-on property:sys.radio.shutdown=true
-   exec /system/bin/sh /system/etc/init.qcom.efs.sync.sh
-
 service dhcpcd_bt-pan /system/bin/dhcpcd -BKLG
     class late_start 
     disabled
@@ -361,40 +353,12 @@ service oem_rpc_svc /system/bin/oem_rpc_svc
     class main
     oneshot
 
-service gps_nmea /system/bin/port-bridge /dev/nmea /dev/ttyGS1
-    disabled
-
-service compassd /system/bin/compassd
-    class main
-    disabled
-    oneshot
-
-service akm8963 /system/bin/akmd8963
-    class main
-    disabled
-    oneshot
-
-service akm8975 /system/bin/akmd8975
-    class main
-    disabled
-    oneshot
-
-service qcom-post-boot /system/bin/sh /system/etc/init.qcom.post_boot.sh
-    class main
-    user root
-    disabled
-    oneshot
-    
-on property:sys.boot_completed=1
-    start qcom-post-boot
-
 service rmt_oeminfo /system/bin/rmt_oeminfo
     class core
 
 on property:ro.boot.emmc=true
     start rmt_oeminfo
     start rmt_storage
-
 
 service abtfilt /system/bin/abtfilt -a -d -z -n -q -v -s -w eth0
     class late_start
@@ -403,37 +367,16 @@ service abtfilt /system/bin/abtfilt -a -d -z -n -q -v -s -w eth0
     disabled
     oneshot
 
-on property:net.service.pppd.enable=1
-    exec /system/bin/rmmod pppoe.ko    
-    exec /system/bin/netcfg rmnet0 down
-    start pppd2
-on property:net.service.pppd.enable=0
-    stop pppd2
-    insmod /system/lib/modules/pppoe.ko
-
-service gps_check /system/bin/gps_check
-    class main
-    user root
-    group root
-    oneshot
-
 service qosmgrd /system/bin/qosmgr /system/etc/qosmgr_rules.xml
     user system
     group system
     disabled
-    
-service pppd-gprs /system/bin/pppd call gprs 
-    class main
-    user root
-    group radio cache inet misc audio sdcard_rw qcom_oncrpc diag
-    oneshot
-    disabled
 
 # Start camera server as daemon
 service qcamerasvr /system/bin/mm-qcamera-daemon
-   class late_start
-   user media
-   group system camera inet audio
+    class late_start
+    user media
+    group system camera inet audio
 
 service mpdecision /system/bin/mpdecision --Nw 5.4 --Ts 350 --no_sleep --avg_comp --single_core_while_panel_off
     class late_start 
