--- a/ramdisk/init.huawei.rc
+++ b/ramdisk/init.huawei.rc
@@ -5,17 +5,17 @@ on early-init
 
     mkdir /cust
     mkdir /storage 0050 system sdcard_r
-    mkdir /storage/sdcard1 0000 system system
     mkdir /storage/sdcard0 0000 system system
+    mkdir /storage/sdcard1 0000 system system
 
     # For backwards compatibility
-    symlink /storage/sdcard1 /mnt/sdcard
-    symlink /storage/sdcard1 /sdcard
     symlink /storage/sdcard0 /mnt/internal_sd
     symlink /storage/sdcard0 /internal_sd
+    symlink /storage/sdcard1 /mnt/sdcard
+    symlink /storage/sdcard1 /sdcard
 
-    export EXTERNAL_STORAGE /storage/sdcard1
-    export SECONDARY_STORAGE /storage/sdcard0
+    export EXTERNAL_STORAGE /storage/sdcard0
+    export SECONDARY_STORAGE /storage/sdcard1
 
     # Can start monitoring.
     mkdir /dev/bus 0755 root root
@@ -328,6 +328,16 @@ service iprenew_bt-pan /system/bin/dhcpcd -n
 	 
 service oem_rpc_svc /system/bin/oem_rpc_svc
     class main
+    oneshot
+
+service akm8963 /system/bin/akmd8963
+    class main
+    disabled
+    oneshot
+  
+service akm8975 /system/bin/akmd8975
+    class main
+    disabled
     oneshot
 
 service rmt_oeminfo /system/bin/rmt_oeminfo
