--- a/ramdisk/init.huawei.rc
+++ b/ramdisk/init.huawei.rc
@@ -53,6 +53,8 @@ on post-fs
     chmod 0664 /dev/light
     chmod 0664 /dev/proximity
     chmod 0664 /dev/accel
+    chmod 0664 /dev/compass_aot
+    chmod 0664 /dev/akm8975_dev
 	
     # Create QMUX deamon socket area
     mkdir /dev/socket/qmux_radio 0770 radio radio
@@ -253,6 +255,13 @@ on post-fs-data
 on property:init.svc.wpa_supplicant=stopped
     stop dhcpcd
 
+on property:wlan.driver.status=unloaded
+    start hwmac
+
+service hwmac /system/bin/hwmac
+    class main
+    oneshot
+
 service wlan_detect /system/bin/wlan_detect
     class main
     user root
@@ -346,10 +355,6 @@ service rmt_oeminfo /system/bin/rmt_oeminfo
 on property:ro.boot.emmc=true
     start rmt_oeminfo
     start rmt_storage
-
-service btmac /system/bin/btmac
-    class main
-    oneshot
 
 service qosmgrd /system/bin/qosmgr /system/etc/qosmgr_rules.xml
     user system
