Fix buttons backlight

--- a/ramdisk/init.huawei.rc
+++ b/ramdisk/init.huawei.rc
@@ -91,6 +91,9 @@ on post-fs
 
     # For bridgemgr daemon to inform the USB driver of the correct transport
     chown radio radio /sys/class/android_usb/f_rmnet_smd_sdio/transport
+    
+    # Set buttons backlight brightness value
+    write /sys/class/leds/button-backlight/max_brightness 20
 
     # Configure and enable KSM
     write /sys/kernel/mm/ksm/pages_to_scan 600
